--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ pandas = "^2.0.1"
 scikit-learn = "^1.2.2"
 datasets = "^2.11.0"
 sacrebleu = "^2.3.1"
+evaluate = "^0.4.0"
+nltk = "^3.8.1"
+accelerate = "^0.19.0"
+kotan = "^0.1.3"
+protobuf = "~3.20"
 
 [tool.poetry.dev-dependencies]
 ipykernel = "^6.22.0"
